java script add

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                          specializing in UI design and app development. I create visually stunning and 
                          user-friendly Android applications.
                          I enjoy spending my time to learn the new technology and solving DSA
-                        problems on popular platforms like GFG, and CodeForce.
+                        problems on popular platforms like GFG, and CodeForce.My self Rahman
                     </p>
                     <div class="w-full flex justify-center lg:justify-start items-center py-5 gap-5">
                         <a href="https://github.com/mohdmustaqeem7830" target="_blank" class="btn">Know more</a>
