change about on me

--- a/index.html
+++ b/index.html
@@ -95,13 +95,16 @@
                 <div class="ab-right lg:w-[70%] w-full">
                     <h2 class="text-5xl text-color-secondry my-5 font-extrabold text-center lg:text-left">Mohd Mustaqeem
                     </h2>
-                    <p class="text-white text-sm tracking-wide font-extralight mt-4 mb-4">I am currently
-                        studying in B.Tech in Computer Science & Information Technology at Mahatma
-                        Jyotiba Phule Rohilkhand University Bareilly, I am a skilled Android developer
+                    <p class="text-white text-sm tracking-wide font-extralight mt-4 mb-4">
+                         I am a skilled Android developer
                          specializing in UI design and app development. I create visually stunning and 
                          user-friendly Android applications.
+                         As an Android developer, i am a a creative and detail-oriented professional 
+                         with a passion for crafting exceptional user interfaces and developing high-quality Android applications.
+                          With a strong background in UI/UX design and a deep understanding of Android development, myself
+                           dedicated to delivering immersive and intuitive mobile experiences.
                          I enjoy spending my time to learn the new technology and solving DSA
-                        problems on popular platforms like GFG, and CodeForce.My self Rahman
+                        problems on popular platforms like GFG, and CodeForce.
                     </p>
                     <div class="w-full flex justify-center lg:justify-start items-center py-5 gap-5">
                         <a href="https://github.com/mohdmustaqeem7830" target="_blank" class="btn">Know more</a>
