--- a/index.html
+++ b/index.html
@@ -63,11 +63,16 @@
                                 <a href="tel:+917830402482"><p class="text-color-secondry flex items-center"><i class="fa-solid fa-phone ancher"></i>+91-7830402482</p></a>
                                <a href="mailto:mustakimraza38@gmail.com" > <p class="text-color-secondry flex items-center "><i class="fa-solid fa-envelope ancher mr-2 "></i> mustakimraza38@gmail.com</p></a>
                             </div>
-                    <p class="text-white text-sm tracking-wide font-extralight mt-4 mb-8">I am currently studying in
-                        B.Tech in Computer Science & Information Technology at Mahatma Jyotiba Phule Rohilkhand
-                        University Bareilly, and I love to create and design attractive webpages. I enjoy spending
-                        my time doing competitive programming and solving DSA problems on popular platforms like
-                        HackerRank, GFG, and CodeChef.i m mohd mustaqeem raza
+                    <p class="text-white text-sm tracking-wide font-extralight mt-4 mb-8">
+                        I am a skilled Android developer
+                        specializing in UI design and app development. I create visually stunning and 
+                        user-friendly Android applications.
+                        As an Android developer, i am a a creative and detail-oriented professional 
+                        with a passion for crafting exceptional user interfaces and developing high-quality Android applications.
+                         With a strong background in UI/UX design and a deep understanding of Android development, myself
+                          dedicated to delivering immersive and intuitive mobile experiences.
+                        I enjoy spending my time to learn the new technology and solving DSA
+                       problems on popular platforms like GFG, and CodeForce.
                     </p>
                     <div class="flex gap-8 my-8">
                         <a href="https://www.linkedin.com/in/mohd-mustaqeem-7b7547227" target="_blank" class="btn">Linkdin</a>
@@ -96,16 +101,10 @@
                     <h2 class="text-5xl text-color-secondry my-5 font-extrabold text-center lg:text-left">Mohd Mustaqeem
                     </h2>
                     <p class="text-white text-sm tracking-wide font-extralight mt-4 mb-4">
-                         I am a skilled Android developer
-                         specializing in UI design and app development. I create visually stunning and 
-                         user-friendly Android applications.
-                         As an Android developer, i am a a creative and detail-oriented professional 
-                         with a passion for crafting exceptional user interfaces and developing high-quality Android applications.
-                          With a strong background in UI/UX design and a deep understanding of Android development, myself
-                           dedicated to delivering immersive and intuitive mobile experiences.
-                         I enjoy spending my time to learn the new technology and solving DSA
-                        problems on popular platforms like GFG, and CodeForce.
+                      comming soon !
                     </p>
+
+
                     <div class="w-full flex justify-center lg:justify-start items-center py-5 gap-5">
                         <a href="https://github.com/mohdmustaqeem7830" target="_blank" class="btn">Know more</a>
                         <a href="#contact" class="btn2">Contact</a>
